<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.dicka.spring.javacore.activity.KategoriAddActivity">

    <TextView
        android:id="@+id/textViewNama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/textViewNama"
        />

    <EditText
        android:id="@+id/etNama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintNama"
        android:inputType="text"
        />

    <TextView
        android:id="@+id/textViewDeskripsi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/textViewDeskripsi"
        />

    <EditText
        android:id="@+id/etDeskripsi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintDeskripsi"
        android:inputType="text"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <Button
            android:id="@+id/btnSimpan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnSimpanKategori"
            android:textColor="@color/colorPrimaryDark"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnKembali"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnKembali"
            android:textColor="@color/colorPrimaryDark"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</LinearLayout>
