<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.dicka.spring.javacore.activity.DetailKategoriActivity">

    <TextView
        android:id="@+id/textDetilId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewIdkategori"
        android:textStyle="bold"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/textDetilNama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewNama"
        android:textStyle="bold"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/textDetilDeskripsi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewDeskripsi"
        android:textStyle="bold"
        android:textSize="20sp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        tools:ignore="UselessLeaf">

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnUpdateKategori"
            android:textStyle="bold"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnHapus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnHapus"
            android:textStyle="bold"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</LinearLayout>
