<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.dicka.spring.javacore.activity.UpdateKategoriActivity">

    <TextView
        android:id="@+id/textViewNama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/textViewNama"
        />

    <EditText
        android:id="@+id/edtEditNama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/hintNama"
        />

    <TextView
        android:id="@id/textViewDeskripsi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/textViewDeskripsi"
        />

    <EditText
        android:id="@+id/edtEditDeskrispi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/textViewDeskripsi"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/btnEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnUpdateKategori"
            android:textStyle="bold"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnKembali"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnKembali"
            android:textStyle="bold"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</LinearLayout>
